--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
   "license": "MIT",
   "homepage": "https://github.com/yortus/stem-host#readme",
   "dependencies": {
+    "commander": "^2.9.0",
     "glob": "^7.1.1",
     "semver": "^5.3.0"
   },
   "devDependencies": {
     "@types/chai": "^3.4.31",
+    "@types/commander": "^2.3.31",
     "@types/glob": "^5.0.30",
     "@types/mocha": "^2.2.30",
     "@types/node": "^6.0.37",
